Avoid the automatic zoom-in on input fields on mobile

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -24,6 +24,7 @@
 }
 html {
   font-size: 14px;
+  -webkit-text-size-adjust: 100%;
 }
 body {
   min-height: 100vh;
